@@ -45,3 +45,11 @@ HORAS TRABALHADAS: 4h
 - Suporte a adicionar feed diretamente do Reader [incompleto] (bugzId:40) 
 
 HORAS TRABALHADAS: 4h
+
+==========
+23/10/2009
+==========
+
+- Suporte a adicionar feed diretamente do Reader [incompleto] (bugzId:40) 
+
+HORAS TRABALHADAS: 3h
